--- a/src/renderer/components/layout/Sidebar.module.scss
+++ b/src/renderer/components/layout/Sidebar.module.scss
@@ -11,6 +11,10 @@
 .collapsed {
   width: 52px;
 
+  .top {
+    padding-top: 48px;
+  }
+
   .navItem {
     justify-content: center;
     padding: 6px;
